# python-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  pytest.ini
task_manager/: settings.py  urls.py  utils.py  views.py
task_manager/fixtures/: labels.json  my_tasks.json  statuses.json  test_data_for_users.json  users.json
task_manager/labels/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/labels/: labels_list.html
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/templates/statuses/: statuses_index.html
task_manager/tasks/: admin.py  apps.py  filters.py  forms.py  models.py  tests.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/tasks/templates/tasks/: show_task.html  tasks_list.html
task_manager/templates/: base.html  delete_confirmation_form.html  index.html
task_manager/users/: forms.py  mixins.py  tests.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/templates/users/: delete_user.html
